@@ -130,31 +130,33 @@ typedef enum {
 	EC_REWARD_XP = 26,
 	EC_REWARD_CURRENCY = 27,
 	EC_REWARD_ITEM = 28,
-	EC_RESTORE = 29,
-	EC_POWER = 30,
-	EC_SPAWN = 31,
-	EC_STASH = 32,
-	EC_NPC = 33,
-	EC_MUSIC = 34,
-	EC_CUTSCENE = 35,
-	EC_REPEAT = 36,
-	EC_SAVE_GAME = 37,
-	EC_BOOK = 38,
-	EC_SCRIPT = 39,
-	EC_CHANCE_EXEC = 40,
-	EC_RESPEC = 41,
-	EC_NPC_ID = 42,
-	EC_NPC_HOTSPOT = 43,
-	EC_NPC_DIALOG_THEM = 44,
-	EC_NPC_DIALOG_YOU = 45,
-	EC_NPC_VOICE = 46,
-	EC_NPC_DIALOG_TOPIC = 47,
-	EC_NPC_DIALOG_GROUP = 48,
-	EC_NPC_ALLOW_MOVEMENT = 49,
-	EC_NPC_PORTRAIT_THEM = 50,
-	EC_NPC_PORTRAIT_YOU = 51,
-	EC_QUEST_TEXT = 52,
-	EC_WAS_INSIDE_EVENT_AREA = 53
+	EC_REWARD_LOOT = 29,
+	EC_REWARD_LOOT_COUNT = 30,
+	EC_RESTORE = 31,
+	EC_POWER = 32,
+	EC_SPAWN = 33,
+	EC_STASH = 34,
+	EC_NPC = 35,
+	EC_MUSIC = 36,
+	EC_CUTSCENE = 37,
+	EC_REPEAT = 38,
+	EC_SAVE_GAME = 39,
+	EC_BOOK = 40,
+	EC_SCRIPT = 41,
+	EC_CHANCE_EXEC = 42,
+	EC_RESPEC = 43,
+	EC_NPC_ID = 44,
+	EC_NPC_HOTSPOT = 45,
+	EC_NPC_DIALOG_THEM = 46,
+	EC_NPC_DIALOG_YOU = 47,
+	EC_NPC_VOICE = 48,
+	EC_NPC_DIALOG_TOPIC = 49,
+	EC_NPC_DIALOG_GROUP = 50,
+	EC_NPC_ALLOW_MOVEMENT = 51,
+	EC_NPC_PORTRAIT_THEM = 52,
+	EC_NPC_PORTRAIT_YOU = 53,
+	EC_QUEST_TEXT = 54,
+	EC_WAS_INSIDE_EVENT_AREA = 55
 }EVENT_COMPONENT_TYPE;
 
 class Event_Component {
