@@ -8,6 +8,7 @@ Engine features:
 * Add ability to prevent certain powers from being placed on the actionbar. (Justin Jacobs)
 * Multiple entries of "requires_item" and "requires_equipped_item" are now supported for Powers. (Justin Jacobs)
 * Add "keep_buyback_on_map_change" to engine/misc.txt to disable saving the buyback between maps. (Justin Jacobs)
+* Add "reward_loot" and "reward_loot_count" to Events for rewarding via loot tables. (Justin Jacobs)
 
 Engine fixes:
 
